sql/test/error/error5.exp


select * from t1 where 1.0;
       ^
       |
        ----- ERROR
Error: line 3, characters 8-8:
A where clause cannot be a FLOAT
